--- a/.editorconfig
+++ b/.editorconfig
@@ -69,7 +69,7 @@ csharp_style_expression_bodied_indexers = true:warning
 csharp_style_expression_bodied_accessors = true:warning
 
 # Specify the preferred location for braces in control flow statements
-csharp_new_line_before_open_brace = control_structures:warning
+csharp_new_line_before_open_brace = all
 csharp_new_line_before_else = true:warning
 csharp_new_line_before_catch = true:warning
 csharp_new_line_before_finally = true:warning
